@@ -1,4 +1,4 @@
-from filebeat import TestCase
+from filebeat import TestCase, Proc
 import os
 import time
 
@@ -109,6 +109,36 @@ class Test(TestCase):
 
         objs = self.read_output()
         assert len(objs) == iterations1+iterations2
+
+    def test_stdin_eof(self):
+        """
+        Test that Filebeat works when stdin is closed.
+        """
+        self.render_config_template(
+            input_type="stdin"
+        )
+
+        args = ["../../filebeat.test",
+                "-e",
+                "-c", os.path.join(self.working_dir, "filebeat.yml"),
+                "-systemTest",
+                "-v",
+                "-d", "*",
+                "-test.coverprofile",
+                os.path.join(self.working_dir, "coverage.cov")
+                ]
+        proc = Proc(args, os.path.join(self.working_dir, "filebeat.log"))
+        os.write(proc.stdin_write, "Hello World\n")
+        os.close(proc.stdin_write)
+
+        proc.start()
+        self.wait_until(lambda: self.output_has(lines=1))
+
+        proc.proc.terminate()
+        proc.proc.wait()
+
+        objs = self.read_output()
+        assert objs[0]["message"] == "Hello World"
 
     def test_rotating_close_older_larger_write_rate(self):
         self.render_config_template(
